cmake_minimum_required(VERSION 3.9)
set(CUDA_TOOLKIT_ROOT_DIR /usr/local/cuda-8.0)
project(PointCloudPoseRecognitionCUDA)
set(CMAKE_CXX_STANDARD 11)
find_package(CUDA 8 QUIET REQUIRED)
find_package(PCL 1.8 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions("-Wno-deprecated-gpu-targets")
add_definitions(${PCL_DEFINITIONS})
set(CUDA_NVCC_FLAGS -gencode arch=compute_61,code=sm_61;-G;-g)
cuda_add_executable(PointCloudPoseRecognitionCUDA src/main.cu)
target_link_libraries(PointCloudPoseRecognitionCUDA ${CUDA_LIBRARIES} ${PCL_LIBRARIES})
